Java 8 change -XX:MaxPermSize to -XX:MaxMetaspaceSize